[package]
name = "sandbox-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
onnxruntime = "0.0.14"
rust-bert = "0.20.0"
scanf = "1.2.1"
serde = "1.0.152"
serde_json = "1.0.93"
terminal-menu = "2.0.5"
tokenizers = "0.13.2"
