[package]
name = "sandbox-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
onnxruntime-sys = { path = "/opt/onnxruntime/rust/onnxruntime-sys"}
onnxruntime = { path = "/opt/onnxruntime/rust/onnxruntime"}
rust-bert = "0.20.0"
rust_tokenizers = "8.0.0"
scanf = "1.2.1"
serde = "1.0.152"
serde_json = "1.0.93"
terminal-menu = "2.0.5"
tokenizers = "0.13.2"
tch = "0.10.1"
cached-path = "0.6.0"
dirs = "4.0.0"
ndarray = "0.15.6"
csv = "1.2.0"
